Completed exercise 03 Separated elements between left and right, correct padding/gaps.

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,9 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content: space-between;
+  padding: 8px;
 }
 
 .profile-image {
@@ -41,8 +44,24 @@ a {
   /* this removes the line under our links */
   text-decoration: none;
   color: rebeccapurple;
+  margin:0px 8px;
 }
 
 ul {
   list-style-type: none;
+  display:flex;
+  padding: 0px;
+}
+
+.left{
+  display: flex;
+  align-items: center;
+  justify-content:center;
+  gap: 16px;
+}
+
+.right{
+  display: flex;
+  align-items: center;
+  gap: 16px;
 }
